<resources>
    <string name="app_name">Exploding Blob Toss</string>
    <string name="defaultPeerName">NO NAME</string>
    <!--Main Menu-->
    <string name="game_title_text">Exploding Blob Toss</string>
    <string name="start_game_btn">Start Game</string>
    <string name="tutorial_btn">Tutorial</string>
    <string name="back_btn">Back</string>
    <string name="connected_players_title">Connected Players</string>
    <string name="Settings_title">Settings</string>

    <string name="group_owner_text">THE OWNER</string>
    <string name="yes">YES</string>
    <string name="client_text">[client text]</string>
    <string name="empty"> </string>
    <string name="enable_p2p_button">Enable wifi-direct</string>
    <!--End Game-->
    <string name="restart_btn">Restart</string>
    <string name="next_round_btn">Next Round</string>
    <string name="round_result_text">You Lose</string>

    <!--Peer Setup-->
    <string name="label_me">Me</string>
    <string name="label_peers">Available Players</string>
    <string name="empty_message">Refresh the list to show nearby players</string>
    <string name="connect_peer_button">Connect &amp; Play</string>
    <string name="connect_peers_title">Connect To Peers</string>
    <string name="detected_devices_text">Detected Devices:</string>
    <!--Main Game Activity-->
    <string name="instructions_title">Catch the blob from your opponent!</string>
    <string name="round_count_lbl">Round: %d </string>
    <string name="score_lbl">Score: %d</string>
    <string name="quit_btn">Quit to Menu</string>
    <!--Pause Menu (game activity)-->
    <string name="resume_btn">Resume</string>
    <string name="pause_menu_title">Paused</string>
    <string name="audio_switch">Sound Effects  </string>
    <string name="vibrate_switch">Vibration  </string>

    <!--Tutorial page-->
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="part1_title">Connect To Players</string>
    <string name="part1_tutorial">After tapping \"Start Game\" you will need to connect to another players device</string>
    <string name="step1_tutorial">Step 1: Ensure you have wifi-direct enabled on our device. If you do not, you can access the setting through the options menu in the top right and choosing \"Enable wifi-direct\"</string>
    <string name="step2_tutorial">Step 2: Press the refresh icon next to the \"Available Players\" list</string>
    <string name="step3_tutorial">Step 3: Select the player you want to play with</string>
    <string name="step4_tutorial">Step 4: Press \"Connect\"</string>
    <string name="step5_tutorial">Step 5: The game will start automatically after a connection has been established</string>
    <string name="part2_title">Throw and Catch the Blob</string>
    <string name="part2_subtitle_tutorial">The game will automatically begin and player 1 will have the blob first</string>
    <string name="part2_step1_tutorial">Step 1: Hold your phone in landscape mode, When the blob appears on your screen push your device forward to toss the blob</string>
    <string name="part2_step2_tutorial">Step 2: When the other player throws the blob you must catch it by thrusting your phone forward in the same motion as a throw</string>
    <string name="part2_step3_tutorial">NOTE: you will need to catch the blob before it reaches the bottom of the screen or it will count as a drop!</string>
    <string name="part3_Title">Winning the Game</string>
    <string name="part3_subtitle">You win the game if your opponent fails to catch the blob or if the blob explodes after your opponent catches it!</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">file</string>
    <!---->


</resources>
